--- a/app/blog/posts/f.mdx
+++ b/app/blog/posts/f.mdx
@@ -1,17 +1,7 @@
 ---
-title: 'this is what Faith is about'
+title: 'words'
 publishedAt: '2024-05-15'
-summary: 'this is what Faith is all about, you have to believe it before you see it.'
+summary: 'words were originally meant to create and then communicate.'
 ---
 
-this is what faith is all about, you have to believe it before you see it. 
-You've got to go around knowing that almighty God put something on you. 
-
-## a
-
-you have an advantage, it's his Favor. 
-it causes you to stand out. 
-it causes people to be good to you.
-it puts you at the right place at the right time.
-
-it may look impossible but don't ever rule out the favor of God. 
+words are containers holding an image meant to be expressed.
