--- a/app/blog/posts/create.mdx
+++ b/app/blog/posts/create.mdx
@@ -1,11 +1,7 @@
 ---
 title: 'create'
 publishedAt: '2024-05-15'
-summary: 'researching, exploring and creating'
+summary: 'you gotta say it'
 ---
 
-create what you want when you want it. 
-we are carriers to produce supernaturally what we need when we need it.
-your spirit produces and your hands gathers it. 
-the kingdom of God is in you and it can produce an economic stimulus package for you and your community. it is powerful enough. 
-Favor is when God is leaning in your direction. 
+the name of Jesus. acts 3 6. when you call the name everything comes with it. 
